final with readme

--- a/student_loans_with_deep_learning.ipynb
+++ b/student_loans_with_deep_learning.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "0otrXpJc6q6u"
    },
@@ -2018,30 +2018,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "67owwb_g6W-g"
    },
    "outputs": [],
    "source": [
-    "# 1. Describe the data that you would need to collect to build a recommendation system to recommend student loan options for students.\n",
-    "# Explain why this data would be relevant and appropriate.\n",
-    "\"\"\"\n",
-    "To build a recommendation system for student loans, essential data to collect include student demographics (age, income, education level), financial information (credit score, annual income, existing debts), loan product details (interest rates, terms, lender reputations), and repayment history of similar borrowers. This data helps align loan options with individual profiles and financial capabilities, allowing for tailored bank offerings based on risk profiles and success rates in repayments.\n",
-    "\"\"\"\n",
+    "# 1. In order to build a recommendation system for student loans, important data, such as demographics (age, income, education level), financial information (credit score, annual income, existing debts), loan product details (interest rates, terms, lender reputations), and repayment history of similar borrowers, must be gathered. This data helps align loan options with individual profiles and financial capabilities, allowing for tailored bank offerings based on risk profiles and success rates in repayments.\n",
     "\n",
-    "# 2. Based on the data you chose to use in this recommendation system, would your model be using collaborative filtering, content-based filtering, or context-based filtering?\n",
-    "# Justify why the data you selected would be suitable for your choice of filtering method.\n",
-    "\"\"\"\n",
-    "The recommendation system would primarily use content-based filtering, as it relies on specific attributes of the loan products (like interest rates), and the characteristics of the borrowers (like credit score and income). This method compares the features of the loan products to the user's profile to recommend the most suitable options for the user's financial situation and preferences.\n",
-    "\"\"\"\n",
+    "# 2. The recommendation system would primarily use content-based filtering, for it relies on specific attributes of the loan products (like interest rates), and the characteristics of the borrowers (like credit score and income). This method compares the features of the loan products to the user's profile to recommend the most suitable options for the user's financial situation and preferences.\n",
     "\n",
-    "# 3. Describe two real-world challenges that you would take into consideration while building a recommendation system for student loans.\n",
-    "# Explain why these challenges would be of concern for a student loan recommendation system.\n",
-    "\"\"\"\n",
-    "Two significant challenges include privacy and data security concerns when handling sensitive financial information, which could lead to legal ramifications if mishandled. Additionally, the dynamic nature of interest rates and loan offerings presents a challenge; financial institutions frequently update their products, requiring the recommendation system to continuously adapt to ensure it provides accurate and beneficial suggestions to students.\n",
-    "\"\"\""
+    "# 3. Two challenges are privacy and data security concerns when handling sensitive financial information, which could lead to legal ramifications if mishandled. Also, the dynamic nature of interest rates and loan offerings presents a challenge; financial institutions frequently update their products, requiring the recommendation system to continuously adapt to ensure it provides accurate and beneficial suggestions to students.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
